--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ spring.flyway.baseline-on-migrate=true
 
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+jwt.expiry = 3600
+
+jwt.secret = "satyamChoubeycheckingrandomtokengeneration"
