--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,6 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 jwt.expiry = 3600
 
+cookie.expiry = 3600
+
 jwt.secret = "satyamChoubeycheckingrandomtokengeneration"
