--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -45,6 +46,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
     implementation("io.jsonwebtoken:jjwt:0.13.0")
+
+
+    // local publish library adding dependency
+    implementation 'org.example:UberProject-EntityService:0.0.3-SNAPSHOT'
 }
 
 tasks.named('test') {
